--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     environment:
       - LICENSE=accept
       - MQ_QMGR_NAME=QM1
+      - MQ_DEV=true
+      - MQ_APP_PASSWORD=passw0rd
     container_name: qm1
     stdin_open: true
     tty: true
@@ -24,6 +26,8 @@ services:
     environment:
       - LICENSE=accept
       - MQ_QMGR_NAME=QM2
+      - MQ_DEV=true
+      - MQ_APP_PASSWORD=passw0rd
     container_name: qm2
     stdin_open: true
     tty: true
