--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,27 @@
 version: '3'
+
+volumes:
+  qm1data:
+  qm2data:
+  qm3data:
+
 services:
+
+  mq-explorer:
+    image: mq-explorer
+    hostname: mq-explorer
+    environment:
+      - DISPLAY=host.docker.internal:0
+    entrypoint: ["MQExplorer", "-configuration", "/mnt/mqm/"]
+    container_name: mq-explorer
+    volumes:
+      - /tmp/.X11-unix:/tmp/.X11-unix
+    stdin_open: true
+    tty: true
+    restart: always
+    networks:
+      customnetwork:
+        ipv4_address: 172.20.0.9
 
   qm1:
     image: ibmcom/mq:latest
@@ -12,14 +34,21 @@ services:
       - MQ_QMGR_NAME=QM1
       - MQ_DEV=false
       - MQ_APP_PASSWORD=passw0rd
+      - MQ_ADMIN_PASSWORD=passw0rd
+    entrypoint: runmqserver
     container_name: qm1
     volumes:
+      - qm1data:/mnt/mqm
       - ./etc/qm1/config.mqsc:/etc/mqm/config.mqsc
       - ./etc/qm1/mq.htpasswd:/etc/mqm/mq.htpasswd
       - ./etc/qm1/qm-service-component.ini:/etc/mqm/qm-service-component.ini
+#      - ./etc/qm1/nativeha.ini:/etc/mqm/nativeha.ini
     stdin_open: true
     tty: true
     restart: always
+    networks:
+      customnetwork:
+        ipv4_address: 172.20.0.10
 
   qm2:
     image: ibmcom/mq:latest
@@ -32,15 +61,53 @@ services:
       - MQ_QMGR_NAME=QM2
       - MQ_DEV=false
       - MQ_APP_PASSWORD=passw0rd
+      - MQ_ADMIN_PASSWORD=passw0rd
+    entrypoint: runmqserver
     container_name: qm2
     volumes:
+      - qm2data:/mnt/mqm
       - ./etc/qm2/config.mqsc:/etc/mqm/config.mqsc
       - ./etc/qm2/mq.htpasswd:/etc/mqm/mq.htpasswd
       - ./etc/qm2/qm-service-component.ini:/etc/mqm/qm-service-component.ini
+      - ./etc/qm2/nativeha.ini:/etc/mqm/nativeha.ini
     stdin_open: true
     tty: true
     restart: always
+    networks:
+      customnetwork:
+        ipv4_address: 172.20.0.11
 
+  qm3:
+    image: ibmcom/mq:latest
+    ports:
+      - "1416:1414"
+      - "9445:9443"
+    hostname: qm3
+    environment:
+      - LICENSE=accept
+      - MQ_QMGR_NAME=QM3
+      - MQ_DEV=false
+      - MQ_APP_PASSWORD=passw0rd
+    entrypoint: runmqserver
+    container_name: qm3
+    volumes:
+      - qm3data:/mnt/mqm
+      - ./etc/qm3/config.mqsc:/etc/mqm/config.mqsc
+      - ./etc/qm3/mq.htpasswd:/etc/mqm/mq.htpasswd
+      - ./etc/qm3/qm-service-component.ini:/etc/mqm/qm-service-component.ini
+      - ./etc/qm3/nativeha.ini:/etc/mqm/nativeha.ini
+    stdin_open: true
+    tty: true
+    restart: always
+    networks:
+      customnetwork:
+        ipv4_address: 172.20.0.12
+
+networks:
+  customnetwork:
+    ipam:
+      config:
+        - subnet: 172.20.0.0/16
   # janus:
   #   container_name: janus
   #   image: quay.io/hellofresh/janus
@@ -61,4 +128,4 @@ services:
   #   environment: #All these env variables are optionals
   #     - PORT=28778
   #     - DOCKER_SOCKET=/tmp/docker.sock
-  #     - SHOW_LOG_BY_LABEL=logio
+  #     - SHOW_LOG_BY_LABEL=logiovolumes:
