--- a/etc/qm1/nativeha.ini
+++ b/etc/qm1/nativeha.ini
@@ -1,4 +1,14 @@
-Availability:
-  Type=NativeHA
+NativeHALocalInstance:
+  Name=qm1
+  CertificateLabel=ha
+  KeyRepository=/run/runmqserver/ha/tls/key
+  CipherSpec=ANY_TLS12_OR_HIGHER
 NativeHAInstance:
-  ReplicationAddress='172.20.0.10'
+  Name=qm1
+  ReplicationAddress=qm1(1414)
+NativeHAInstance:
+  Name=qm2
+  ReplicationAddress=qm2(1414)
+NativeHAInstance:
+  Name=qm3
+  ReplicationAddress=qm3(1414)
