--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
         ipv4_address: 172.20.0.9
 
   qm1:
-    image: ibmcom/mq:latest
+    image: mq-qmgr #ibmcom/mq:latest
     ports:
       - "1414:1414"
       - "9443:9443"
