--- a/mq-qmgr/Dockerfile
+++ b/mq-qmgr/Dockerfile
@@ -1,5 +1,5 @@
 FROM ibmcom/mq as qmgr
 USER root
-RUN microdnf install -y iproute iputils iptables ipset
+RUN microdnf install -y iproute iputils iptables ipset nc net-utils
 USER 1001
 ENTRYPOINT ["runmqdevserver"]
